# AndroidQtProjExample

./: CMakeLists.txt  README.md
src/: main.cpp
src/android/: Main.qml
src/android/android/: AndroidManifest.xml
